[Add] TheBall structure

--- a/Raylib Starter Project.vcxproj
+++ b/Raylib Starter Project.vcxproj
@@ -134,6 +134,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="TheBall.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TheBall.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
